--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
+    "splitting": "^1.1.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
