--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@coreui/coreui": "^5.4.3",
     "@coreui/react": "^5.9.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/lab": "^7.0.1-beta.20",
+    "@mui/material": "^7.3.6",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
+    "react-vertical-timeline-component": "^3.5.3",
     "splitting": "^1.1.0",
     "styled-components": "^6.1.19",
     "swiper": "^12.0.3"
