--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@coreui/react": "^5.9.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
     "@mui/lab": "^7.0.1-beta.20",
     "@mui/material": "^7.3.6",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.10.1",
     "react-vertical-timeline-component": "^3.5.3",
     "splitting": "^1.1.0",
